--- a/.github/submodules.yml
+++ b/.github/submodules.yml
@@ -5,5 +5,5 @@ version: 2
 updates:
   - package-ecosystem: gitsubmodule
     schedule:
-      interval: "weekly"
+      interval: "daily"
     directory: /
