--- a/.gitmodules
+++ b/.gitmodules
@@ -7,3 +7,6 @@
 [submodule "database/schema/internals/dealermaster"]
 	path = database/schema/internals/dealermaster
 	url = https://github.com/digitphilia/dealermaster.git
+[submodule "database/schema/projects/tradedb"]
+	path = database/schema/projects/tradedb
+	url = https://github.com/digitphilia/tradedb.git
